<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     >

    <!-- History Button is yet hidden since implementation is postponed to 1.2.0 release -->
    <item android:id="@+id/action_history"
        android:title="@string/action_history"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_history_white_24dp"
        />

    <item android:id="@+id/action_signup"
        android:title="Signup"
        android:icon="@drawable/ic_sync_black_24dp"
        />

     <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/activity_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/action_bug"
        android:title="@string/action_bug"
        app:showAsAction="never"/>
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>