<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hirtenstrasse.michael.lnkshortener.SetupStep1Fragment"
    android:padding="15dp">

    <!-- TODO: Update blank fragment layout -->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/setup1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/setup_title_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textStyle="normal|bold"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:text="@string/setup_custom_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="https://1n.pm"
            android:ems="10"
            android:id="@+id/editText" />

        <TextView
            android:text="@string/setup_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="8a4a2c54d582048c31aa85baaeb3f8"
            android:ems="10"
            android:id="@+id/editText2" />

        <Button
            android:text="@string/setup_check_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" />


    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/setup_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_weight="1" />

        <Button
            android:text="@string/setup_next"
            android:layout_width="wrap_content"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>
