<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:weightSum="1">

    <TextView
        android:text="@string/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/about_licence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="viewStart"
        android:textSize="10sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/about_qrgen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textStyle="normal|bold"
        android:textAlignment="viewStart" />

    <TextView
        android:text="@string/about_changelog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textStyle="normal|bold"
        android:textAlignment="viewStart" />

    <TextView
        android:text="@string/logo_licence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textStyle="normal|bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/source_code"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAlignment="textStart" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        >

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_github_dark"
            android:id="@+id/imageButton"
            android:scaleType="fitCenter"
            android:onClick="onClickGitHub"
            android:backgroundTint="@android:color/transparent" />
    </GridLayout>


</LinearLayout>
</ScrollView>