<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hirtenstrasse.michael.lnkshortener.SetupStep1Fragment"
    android:padding="15dp">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/setup1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/setup_use_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textStyle="normal|bold"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/npmRadioGroup"
            android:layout_height="match_parent" >

            <RadioButton
                android:text="@string/setup_anonymous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioAnonymous"
                android:checked="true" />

            <RadioButton
                android:text="@string/setup_login_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioLogin" />


        </RadioGroup>

        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/webViewTOS"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:paddingTop="15dp">
        <CheckBox
            android:text="@string/setup_agree_tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tosCheckBox"
            android:textStyle="normal|bold" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">        <Button
            android:text="@string/setup_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_weight="1" />

            <Button
                android:text="@string/setup_next"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:onClick="nextClickSetup2Default"
                android:id="@+id/nextButton"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
