<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SetupPrimary"
    android:padding="15dp"
    tools:context="de.hirtenstrasse.michael.lnkshortener.SetupStep1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/SetupSecondaryTitle"
                android:text="@string/setup1_title"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/setup_introduction"
                android:textColor="@color/SetupText"
                android:textColorLink="@color/SetupSecondaryTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/setup_choose_title"
                android:textAlignment="textStart"
                android:textColor="@color/SetupSecondaryTitle"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:id="@+id/firstSelectionRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/defaultRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textColor="@color/SetupText"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/setup_1npm" />

                <RadioButton
                    android:id="@+id/customRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:textColor="@color/SetupText"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/setup_custom_server" />

                <RadioButton
                    android:id="@+id/keepRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"

                    android:textColor="@color/SetupText"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/setup_keep_settings" />
            </RadioGroup>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetupButtonBackground"
            android:onClick="nextClickSetup1"
            android:text="@string/setup_next"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</FrameLayout>
