<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_container"
    android:layout_height="match_parent"
    tools:context="de.hirtenstrasse.michael.lnkshortener.SetupFinalStepLoading">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/setup1_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/statusSpinner"
                />

        <TextView
            android:text="@string/setup_create_anonymous_account"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textAlignment="center" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:visibility="gone"
                android:text="@string/setup_created_uuid" />

        </GridLayout>


    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:paddingTop="15dp">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/setup_finish"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
